feat: adding nullifiers in status response
